# Vinci4D_Assignment

./: AssembleAlgorithms.py  FieldsHolder.py  LinearSystem.py  MeshObject.py  Operations.py  QuadElement.py  README.md  YamlParser.py  input.yaml  main.py  requirements.txt  test_assemble_algs.py  test_fields_holder.py  test_linear_system.py  test_mesh_config_parser.py  test_mesh_object.py  test_operations.py  test_pseudo_sim_setup.py
CPP_Impl/: CMakeLists.txt  README.md  build.sh
CPP_Impl/config/: input.yaml
CPP_Impl/include/: AssembleAlgorithms.h  FieldsHolder.h  LinearSystem.h  MeshObject.h  Operations.h  QuadElement.h  VtkOutput.h  YamlParser.h
CPP_Impl/src/: AssembleAlgorithms.cpp  FieldsHolder.cpp  LinearSystem.cpp  MeshObject.cpp  Operations.cpp  QuadElement.cpp  VtkOutput.cpp  YamlParser.cpp  main.cpp
CPP_Impl/tests/: diagnostic_comm_pattern.cpp  test_assemble_algs.cpp  test_coupled_diagnostics.cpp  test_fields_holder.cpp  test_ghost_sync_bug.cpp  test_linear_system.cpp  test_mesh_object.cpp  test_operations.cpp  test_parallel.cpp  test_parallel_debug.cpp  test_pseudo_sim_setup.cpp
LatexReport/: main.aux  main.tex
